--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-3">
-        <img src="bacteria.gif" style='height: 100%; width: 100%; object-fit: contain'/>
+        <img src="static/images/bacteria.gif" style='height: 100%; width: 100%; object-fit: contain'/>
       </div>
       <div class="col-xs-6 jumbotron text-center">
         <h2>Belly Button Biodiversity Dashboard</h2>
         <p>Use the interactive charts below to explore the Belly Button Bacteria dataset.</p>
       </div>
       <div class="col-xs-3">
-        <img src="bellybutton.gif" style='height: 100%; width: 100%; object-fit: contain'/>
+        <img src="static/images/bellybutton.gif" style='height: 100%; width: 100%; object-fit: contain'/>
       </div>
     </div>
     <div class="row">
@@ -55,7 +55,7 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-  <script src="charts.js"></script>
+  <script src="static/js/charts.js"></script>
 
 </body>
 
